Add Observables for french and english in app.component.ts and add message to app.component.html

--- a/src/main/UI/src/app/app.component.html
+++ b/src/main/UI/src/app/app.component.html
@@ -21,10 +21,11 @@
 </header>
 <main id="wrapper">
   <div class="scene" id="welcome">
+    <div>
+      <h1>{{welcomeMessageFrench$ | async}}</h1>
+      <h1>{{welcomeMessageEnglish$ | async}}</h1>
+    </div><br><br>
     <article class="content">
-
- 
-
       <div class="row">
         <div class=""col-12>
           <div class="gallery">
@@ -58,7 +59,7 @@
               </div>
               </form>
 
-        
+
         </div>
       </div>
 
