--- a/src/main/UI/src/app/app.component.html
+++ b/src/main/UI/src/app/app.component.html
@@ -78,10 +78,9 @@
                 <td>
                   <strong>Room #: {{room.roomNumber}}</strong><br/>
                   <strong>Price: ${{room.price}}</strong><br>
-                  <!-- C2 - Code to add CAD and EUR price listings -->
+                  <strong>Price: US${{room.priceUS}}</strong><br>
                   <strong>Price: CA${{room.priceCAD}}</strong><br>
                   <strong>Price: EUR€{{room.priceEUR}}</strong><br>
-                  <!-- C2 - Code to add CAD and EUR price listings -->
                 </td>
                 <td>
                   <button type="submit" class="btn btn-primary" (click)="reserveRoom(room.id)">Reserve</button>
