--- a/src/main/UI/src/app/app.component.html
+++ b/src/main/UI/src/app/app.component.html
@@ -14,6 +14,12 @@
        style="display: block; top: auto; left: auto; bottom: auto; right: auto; position: relative; margin: 0 auto auto; box-sizing: content-box; width: 100%; min-height: 44px; height: auto; padding-top: 0; padding-bottom: 0;">
     <nav id="nav" style="position: relative; top: 0; left: 0; bottom: auto; right: auto; width: 100%;">
       <div class="navbar">
+        <div *ngFor="let message$ of welcomeMessages$">
+          <p>{{ message$ | async }}</p>
+        </div>
+<!--        <h1>{{welcomeMessageEnglish$ | async}}</h1>-->
+<!--        <h1>{{welcomeMessageFrench$ | async}}</h1>-->
+<!--                <h1>TEST MESSAGE</h1>-->
         <div class="brand"><a href="/#welcome">Landon <span>Hotel</span></a></div>
       </div><!-- navbar -->
     </nav>
@@ -23,9 +29,6 @@
   <div class="scene" id="welcome">
     <article class="content">
       <div>
-        <h1>{{welcomeMessageEnglish$ | async}}</h1>
-        <h1>{{welcomeMessageFrench$ | async}}</h1>
-<!--        <h1>TEST MESSAGE</h1>-->
       </div><br><br>
       <div class="row">
         <div class=""col-12>
