Adjust app.component.css

--- a/src/main/UI/src/app/app.component.css
+++ b/src/main/UI/src/app/app.component.css
@@ -254,6 +254,8 @@ header #nav .navbar .brand {
   text-align: center;
   text-transform: uppercase;
   background: #DF4848;
+  align-content: center;
+  justify-content: center;
 }
 
 /* line 17, ../../../components/sass/modules/_nav.scss */
