--- a/src/main/UI/src/app/app.component.html
+++ b/src/main/UI/src/app/app.component.html
@@ -15,7 +15,7 @@
     <nav id="nav" style="position: relative; top: 0; left: 0; bottom: auto; right: auto; width: 100%;">
       <div class="navbar">
         <div *ngFor="let message$ of welcomeMessages$">
-          <p>{{ message$ | async }}</p>
+          <h1>{{ message$ | async }}</h1>
         </div>
 <!--        <h1>{{welcomeMessageEnglish$ | async}}</h1>-->
 <!--        <h1>{{welcomeMessageFrench$ | async}}</h1>-->
