Task B3 - Display the time for an online live presentation held at the Landon Hotel

--- a/src/main/UI/src/app/app.component.html
+++ b/src/main/UI/src/app/app.component.html
@@ -28,6 +28,7 @@
 <main id="wrapper">
   <div class="scene" id="welcome">
     <article class="content">
+      <h1>{{displayPresentation$ | async}}</h1>
       <div>
       </div><br><br>
       <div class="row">
